syntax = "proto3";

package payment;

option go_package = "/payment";

// 支付服务
service PaymentService {
  // 发起支付
  rpc ProcessPayment(ProcessPaymentRequest) returns (ProcessPaymentResponse);
  // 查询支付状态
  rpc GetPaymentStatus(GetPaymentStatusRequest) returns (GetPaymentStatusResponse);
  // 更新支付状态（状态机）
  rpc UpdatePaymentStatus(UpdatePaymentStatusRequest) returns (UpdatePaymentStatusResponse);
}

// 支付状态
enum PaymentStatus {
  UNKNOWN = 0;
  PENDING = 1;     // 待支付
  PAID = 2;        // 已支付
  FAILED = 3;      // 支付失败
  REFUNDED = 4;    // 已退款
}

// 支付事件（状态流转）
enum PaymentEvent {
  PAY = 0;          // 发起支付
  PAY_SUCCESS = 1;  // 支付成功
  PAY_FAIL = 2;     // 支付失败
  REQUEST_REFUND = 3; // 申请退款
  REFUND_SUCCESS = 4; // 退款成功
}

// 支付信息
message Payment {
  int64 id = 1;           // 支付ID
  int64 order_id = 2;     // 订单ID
  float amount = 3;       // 支付金额
  PaymentStatus status = 4;
}

// 发起支付请求
message ProcessPaymentRequest {
  int64 order_id = 1;     // 订单ID
  float amount = 2;       // 支付金额
  string pay_channel = 3; // 支付渠道，如 "wechat"、"alipay"
}

// 发起支付返回
message ProcessPaymentResponse {
  CommonResponse commonResponse = 1;
  Payment payment = 2;    // 支付信息
  string pay_url = 3;     // 跳转到第三方支付的URL (H5, Native, QRCode)
}

// 查询支付状态请求
message GetPaymentStatusRequest {
  int64 payment_id = 1;   // 支付ID
}

// 查询支付状态返回
message GetPaymentStatusResponse {
  CommonResponse commonResponse = 1;
  Payment payment = 2;    // 支付信息
}

// 支付状态更新请求
message UpdatePaymentStatusRequest {
  int64 payment_id = 1;  // 支付ID
  PaymentEvent event = 2; // 触发的支付事件
}

// 支付状态更新返回
message UpdatePaymentStatusResponse {
  CommonResponse commonResponse = 1;
  Payment payment = 2;  // 更新后的支付信息
}

// 支付成功 MQ 通知 Event
message PaymentSuccessMessage {
  int64 payment_id = 1;
  int64 order_id = 2;
  float amount = 3;
  string payment_status = 4; // 一般都是 "completed"
}

// 统一返回消息
message CommonResponse {
  int32 code = 1;          // 状态码
  string message = 2;      // 消息
}